# generator

./: CMakeLists.txt  main.cpp
noiseMC/: noiseMC.cpp  noiseMC.h
signalSummator/: signalSummator.cpp  signalSummator.h
sineOscillator/: sineOscillator.cpp  sineOscillator.h
wavWriter/: wavWriter.cpp  wavWriter.h
